<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp"
        android:background="#ffffff">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notification_title"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/apps_name"
            android:textSize="16dp"
            android:textColor="#000"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/yes"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="14dp"
                android:background="@drawable/ripple_effect"/>
            <TextView
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="14dp"
                android:background="@drawable/ripple_effect"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>