<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_title"
        android:textStyle="bold"
        android:paddingLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/distant_item_bottom_sheet">
        <LinearLayout
            android:id="@+id/extract_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/distant_item_bottom_sheet"
            android:paddingBottom="@dimen/distant_item_bottom_sheet"
            android:paddingLeft="@dimen/padding_left_item_bottom_sheet"
            android:clickable="true"
            android:background="@drawable/more_item_ripple"
            android:paddingRight="20dp">
            <ImageView
                android:layout_width="@dimen/image_size_bottom_sheet"
                android:layout_height="@dimen/image_size_bottom_sheet"
                android:src="@drawable/ic_system"
                android:tint="@color/icon_tint"/>
            <TextView
                android:layout_marginLeft="@dimen/image_size_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/extract_apk"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/distant_item_bottom_sheet"
            android:paddingBottom="@dimen/distant_item_bottom_sheet"
            android:paddingLeft="@dimen/padding_left_item_bottom_sheet"
            android:clickable="true"
            android:background="@drawable/more_item_ripple"
            android:paddingRight="20dp">
            <ImageView
                android:layout_width="@dimen/image_size_bottom_sheet"
                android:layout_height="@dimen/image_size_bottom_sheet"
                android:src="@drawable/ic_share"
                android:tint="@color/icon_tint"/>
            <TextView
                android:layout_marginLeft="@dimen/image_size_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/share_apk"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/run_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/distant_item_bottom_sheet"
            android:paddingBottom="@dimen/distant_item_bottom_sheet"
            android:paddingLeft="@dimen/padding_left_item_bottom_sheet"
            android:clickable="true"
            android:background="@drawable/more_item_ripple"
            android:paddingRight="20dp">
            <ImageView
                android:layout_width="@dimen/image_size_bottom_sheet"
                android:layout_height="@dimen/image_size_bottom_sheet"
                android:src="@drawable/ic_run_app"
                android:tint="@color/icon_tint"/>
            <TextView
                android:layout_marginLeft="@dimen/image_size_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/run_app"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/distant_item_bottom_sheet"
            android:paddingBottom="@dimen/distant_item_bottom_sheet"
            android:paddingLeft="@dimen/padding_left_item_bottom_sheet"
            android:clickable="true"
            android:background="@drawable/more_item_ripple"
            android:paddingRight="20dp">
            <ImageView
                android:layout_width="@dimen/image_size_bottom_sheet"
                android:layout_height="@dimen/image_size_bottom_sheet"
                android:src="@drawable/ic_app_info"
                android:tint="@color/icon_tint"/>
            <TextView
                android:layout_marginLeft="@dimen/image_size_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_info"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/uninstall_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/distant_item_bottom_sheet"
            android:paddingBottom="@dimen/distant_item_bottom_sheet"
            android:paddingLeft="@dimen/padding_left_item_bottom_sheet"
            android:clickable="true"
            android:background="@drawable/more_item_ripple"
            android:paddingRight="20dp">
            <ImageView
                android:layout_width="@dimen/image_size_bottom_sheet"
                android:layout_height="@dimen/image_size_bottom_sheet"
                android:src="@drawable/ic_uninstall"
                android:tint="@color/icon_tint"/>
            <TextView
                android:layout_marginLeft="@dimen/image_size_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uninstall_app"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>