<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_app"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/did_you_like_app"
        android:layout_weight="1"
        android:textSize="14dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:src="@drawable/ic_nav_star"
            android:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:src="@drawable/ic_nav_star"
            android:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:src="@drawable/ic_nav_star"
            android:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:src="@drawable/ic_nav_star"
            android:tint="@color/colorPrimary"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:src="@drawable/ic_nav_star"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14dp"
            android:background="@drawable/ripple_effect"/>
        <TextView
            android:id="@+id/btn_maybe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maybe_later"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14dp"
            android:background="@drawable/ripple_effect"/>
        <TextView
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="14dp"
            android:background="@drawable/ripple_effect"/>
    </LinearLayout>

</LinearLayout>